kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-api
  namespace: node-api
spec:
  selector:
    app: node-api
  type: ClusterIP
  ports:
    - name: node-api
      protocol: TCP
      targetPort: 3000
      port: 80
