kubernetes/ingress-production.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-api
  namespace: node-api
  annotations:
    nginx.org/client-max-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
    - host: api-dev.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: node-api
                port:
                  number: 80
